# gba_rumble

./: CHANGELOG.md  README.md
.github/workflows/: examples.yml  test.yml
.mgba/gbp/mgba/: config.ini
examples/: README.md
examples/agb/: Cargo.toml
examples/agb/.cargo/: config.toml
examples/agb/src/: main.rs
examples/gba/: Cargo.toml
examples/gba/src/: main.rs
gba_rumble/: Cargo.toml
gba_rumble/src/: lib.rs  splash_screen.rs
