[package]
name = "gba_rumble"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
readme = "README.md"

[profile.dev]
opt-level = 3
debug = true

[profile.release]
lto = true

[dependencies]
deranged = {version = "0.4.0", default-features = false}

[dev-dependencies]
claims = "0.8.0"
gba_test = {version = "0.3.1", features = ["log"]}
mgba_log = "0.2.1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(game_boy_player)"] }
